# CRIMSONGUI

./: CMakeLists.txt  SuperBuild.cmake
Apps/CRIMSON/: CMakeLists.txt  CRIMSON.cpp  startCRIMSON.bat.in
Apps/NetlistEditor/: CMakeLists.txt
Apps/NetlistEditor/cmake/Modules/: FindQwt.cmake
Apps/NetlistEditor/src/: CMakeLists.txt
Apps/NetlistEditor/src/gui/: qlogger.h
Apps/NetlistEditor/src/gui/configdialog/: configpage.cpp
Apps/NetlistEditor/src/gui/editor/: graphicsnode.cpp  schematiceditor.cpp  schematiceditor.h  schematicscene.cpp  schematicscene.h  schematicsceneparser.cpp  undoredocommand.cpp
Apps/NetlistEditor/src/gui/qtsolutions/qtpropertyeditor/: qteditorfactory.cpp  qteditorfactory.h  qtpropertymanager.cpp  qtpropertymanager.h  qtvariantproperty.cpp  qtvariantproperty.h
Apps/NetlistEditor/src/gui/workplane/: workplane.cpp
CMake/: CRIMSON.vcxproj.user.in  CrimsonPreparePrebuiltMITK.cmake  FindBoost.cmake  FindOCC.cmake  FindWM5.cmake  crimsonFunctionCreateBlueBerryApplication.cmake
CMake/PackageDepends/: MITK_Boost_Config.cmake  MITK_CGAL_Config.cmake  MITK_Eigen3_Config.cmake  MITK_Qt6_Config.cmake  MITK_VMTK_Config.cmake  MITK_VTK_Config.cmake
CMakeExternals/: GSL.cmake  MITK.cmake  OCC.cmake  OCC_6.9.1.patch  PythonModules.cmake  QtPropertyBrowser.cmake  QtPropertyBrowser_qt6.patch  QtPropertyBrowser_qt6_patch.cmake  TBB.cmake  WM5.cmake  flowsolver.cmake  freetype.cmake  parse.cmake  presolver.cmake
Modules/AsyncTask/: CMakeLists.txt
Modules/CGALVMTKMeshingKernel/: CMakeLists.txt  files.cmake
Modules/CGALVMTKMeshingKernel/DataManagement/: MeshData.cpp  MeshData.h
Modules/CGALVMTKMeshingKernel/ExtensionPoint/: IMeshingKernel.cpp  crimsonTetGenWrapper.cpp  tetgen.cxx
Modules/CGALVMTKMeshingKernel/IO/: LegacyScenePropertySerializers.cpp  MeshDataCoreObjectFactory.h  MeshDataIO.cpp  MeshDataIO.h  MeshingParametersDataIO.cpp  MeshingParametersDataIO.h
Modules/CRIMSONUtils/src/: NodePredicateDerivation.cpp
Modules/PCMRIKernel/: CMakeLists.txt
Modules/PCMRIKernel/DataManagement/: PCMRIData.cpp  PCMRIData.h
Modules/PCMRIKernel/ExtensionPoint/: IPCMRIKernel.cpp  IPCMRIKernel.h
Modules/PCMRIKernel/ExtensionPoint/internal/: BsplineGrid.hxx  EigenCompat.h  Image_tools.hxx  LinearSolvers.hxx  Point_tools.hxx
Modules/PCMRIKernel/IO/: PCMRIDataCoreObjectFactory.h  PCMRIDataIO.cpp  PCMRIDataIO.h
Modules/PythonSolverSetupService/: CMakeLists.txt
Modules/PythonSolverSetupService/src/: PythonSolverStudyData.cpp  SolverSetupPythonObjectIO.h
Modules/SolidKernel/DataManagement/: DiscreteSolidData.cpp  vtkGetBoundaryFaces.cpp
Modules/SolidKernel/ExtensionPoint/: ISolidModelKernel.cpp
Modules/SolidKernel/IO/: DiscreteSolidDataIO.cpp  DiscreteSolidDataIO.h  OCCBRepDataIO.cpp  OCCBRepDataIO.h  SolidDataCoreObjectFactory.cpp  SolidDataCoreObjectFactory.h
Modules/SolidKernel/Interactions/: SolidDataFacePickingObserver.cpp  SolidDataFacePickingObserver.h
Modules/SolidKernel/Testing/: CMakeLists.txt
Modules/SolverSetupService/: CMakeLists.txt
Modules/SolverSetupService/src/IO/: SolutionDataIO.cpp  SolutionDataIO.h
Modules/VesselTree/: CMakeLists.txt
Modules/VesselTree/DataManagement/: VesselPathAbstractData.h  vtkParametricSplineVesselPathData.h
Modules/VesselTree/IO/: IOUtilDataSerializer.h  VesselForestCoreObjectFactory.cpp  VesselForestCoreObjectFactory.h  VesselForestDataIO.cpp  VesselForestDataIO.h  vtkParametricSplineVesselPathIO.cpp  vtkParametricSplineVesselPathIO.h
Modules/VesselTree/Interactions/: VesselPathInteractor.cpp
Modules/VesselTree/Rendering/: vtkParametricSplineVesselPathVtkMapper3D.cpp
Modules/VesselTree/Testing/: CMakeLists.txt
Patch/CTK/CMake/: ctkMacroBuildPlugin.cmake
Patch/CTK/qRestAPI/: qRestAPI.cpp
Patch/commontk_QtPropertyBrowser/: CMakeLists.txt
Patch/commontk_QtPropertyBrowser/src/: CMakeLists.txt
Plugins/: Plugins.cmake
Plugins/uk.ac.kcl.AsyncTaskManager/: CMakeLists.txt
Plugins/uk.ac.kcl.CRIMSONApp/src/: ExpandablePerspectiveButton.cpp  ExpandablePerspectiveButton.h  PopupWidget.cpp
Plugins/uk.ac.kcl.CRIMSONApp/src/internal/Perspectives/: MeshingAndSolverSetupPerspective.cpp
Plugins/uk.ac.kcl.HierarchyManager/src/: HierarchyManager.cpp
Plugins/uk.ac.kcl.SolverSetupPython/src/internal/: uk_ac_kcl_SolverSetupPython_Activator.cpp
Plugins/uk.ac.kcl.SolverSetupView/src/internal/: ContourTypeConversion.cpp  MapAction.cpp  PCMRIMappingWidget.cpp  PCMRIUtils.cpp  ResliceView.cpp  ThumbnailGenerator.cpp  VesselDrivenSlicedGeometry.h
Plugins/uk.ac.kcl.VascularModeling/src/internal/: ContourModelingView.cpp  ContourModelingView.ui  ImportVesselsAction.cpp  LoftAction.cpp  PlanarFigureMITKCompat.h  ReparentAction.cpp  ThumbnailGenerator.cpp  VesselBlendingView.cpp  VesselDrivenResliceView.cpp  VesselDrivenSlicedGeometry.h  VesselPathPlanningView.cpp  vesselPathItemModel.cpp
Plugins/uk.ac.kcl.VesselMeshing.Eager/src/internal/: uk_ac_kcl_VesselMeshing_Eager_Activator.cpp  uk_ac_kcl_VesselMeshing_Eager_Activator.h
Plugins/uk.ac.kcl.VesselMeshing/src/internal/: MeshExplorationView.cpp
